<resources>
    <!-- top bar string values -->
    <string name="app_name">App Name</string>

    <!-- Shared preference strings -->
    <string name="SpUserName">Name</string>
    <string name="SpUserPassword">Password</string>
    <string name="SpAppShPref">mySharedPref</string>


    <!-- TextViews strings -->
    <string name="sign_in">Sign In</string>
    <string name="shw_me_psswd">Show me password</string>
    <string name="nxt">Next</string>
    <string name="lgn_msg">Don\'t have an account yet? click next to sign-up.</string>

    <!-- EditText strings -->
    <string name="user_name">User Name</string>
    <string name="passwd">Password</string>

    <!-- Button strings -->
    <string name="register">Sign Up</string>
    <string name="add">Add</string>

    <!-- Image Descriptions -->
    <string name="lgn_dscptn">Log In icon</string>
    <string name="sgnp_dscptn">Sign Up icon</string>
    <string name="nxt_dscpn">Next Icon</string>
    <string name="bsnss_img_dscptn">Business Image</string>

    <!-- Wellcome activity -->
    <string name="title_activity_wellcome">Wellcome</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Add Business Activity -->
    <string name="bus_tittle">Enter your business details.</string>
    <string name="bus_name">Name</string>
    <string name="bus_address">Address</string>
    <string name="bus_country">Country</string>
    <string name="bus_city">City</string>
    <string name="bus_street">Street</string>
    <string name="bus_number">Phone Number:</string>
    <string name="bus_eMail">Email address:</string>
    <string name="bus_website">Link to website:</string>

    <!-- business item view-->
    <string name="bivbus_name">Name</string>
    <string name="bivbus_mail">mail</string>


</resources>
