<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.a2016.proj.bensimhon.kamoun.java_project_2016.controller.LogInActivity">

    <TextView
        android:id="@+id/sign_txt"
        style="@style/TittleTextView"
        android:text="@string/sign_in" />

    <ImageView
        android:id="@+id/sign_img"
        android:layout_below="@+id/sign_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:src="@drawable/log_in"
        android:contentDescription="@string/lgn_dscptn" />

    <EditText
        android:id="@+id/user_nm_input"
        android:layout_below="@id/sign_img"
        style="@style/PrimaryEdiTextStyle"
        android:text="@string/user_name"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/passwd_input"
        android:layout_below="@id/user_nm_input"
        style="@style/PrimaryEdiTextStyle"
        android:text="@string/passwd"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/in_bttn"
        android:layout_below="@id/passwd_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="signInClick"/>

    <Button
        android:id="@+id/reg_bttn"
        android:layout_below="@id/in_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="signUpClick"/>

</RelativeLayout>
