<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_reg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/reg_txt_vew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"/>

    <EditText
        android:id="@+id/new_usn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_txt_vew"
        android:inputType="textEmailAddress"
        android:text="@string/user_name"/>

    <EditText
        android:id="@+id/pswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_usn"
        android:inputType="textPassword"
        android:text="@string/passwd"/>

    <EditText
        android:id="@+id/cnfrm_pswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pswd"
        android:inputType="textPassword"
        android:text="@string/passwd"/>

    <GridLayout
        android:id="@+id/show_psswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cnfrm_pswd">

        <CheckBox
            android:id="@+id/show_psswd_chbx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shw_me_psswd" />
    </GridLayout>

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_psswd"
        android:text="@string/register" />
</RelativeLayout>